--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "NODE_ENV=production bun run index.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/geoip-lite": "^1.4.4"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "maxmind": "^4.3.24",
     "mongodb": "^6.14.1",
     "winston": "^3.17.0"
   }
